--- a/try.css
+++ b/try.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
-  font-family: arial, sans-serif;
+ font-family: 'Varela Round', sans-serif;
   line-height: 1.5;
-color: aquamarine
+color: black;
+ image-orientation:   
+'Alef', sans-serif;
+font-family: 'Varela Round', sans-serif;
 }
