--- a/try.css
+++ b/try.css
@@ -3,7 +3,7 @@ body {
  font-family: 'Varela Round', sans-serif;
   line-height: 1.5;
 color: black;
- image-orientation:   
+ border-image  
 'Alef', sans-serif;
 font-family: 'Varela Round', sans-serif;
 }
